--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.3.0",
+        "daisyui": "^3.8.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "path": "^0.12.7",
@@ -26,6 +27,7 @@
         "@babel/core": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
         "@babel/preset-react": "^7.22.5",
+        "autoprefixer": "^10.4.16",
         "babel-loader": "^9.1.2",
         "cors": "^2.8.5",
         "css-loader": "^6.8.1",
@@ -33,7 +35,7 @@
         "html-webpack-plugin": "^5.5.3",
         "node": "^20.2.0",
         "nodemon": "^2.0.22",
-        "postcss": "^8.4.24",
+        "postcss": "^8.4.31",
         "postcss-loader": "^7.3.3",
         "prettier": "^2.8.8",
         "react": "^18.2.0",
@@ -42,6 +44,7 @@
         "sass": "^1.63.4",
         "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
+        "tailwindcss": "^3.3.3",
         "webpack": "^5.86.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
