--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dev": "NODE_ENV=development webpack serve & nodemon server/server.js"
     },
     "engines": {
-        "node": ">=18.0.0"
+        "node": "=18.0.0"
       },
     "author": "Wonderpus Photogenicus",
     "license": "MIT",
@@ -36,7 +36,6 @@
         "css-loader": "^6.8.1",
         "express": "^4.18.2",
         "html-webpack-plugin": "^5.5.3",
-        "node": "^20.2.0",
         "nodemon": "^2.0.22",
         "postcss": "^8.4.31",
         "postcss-loader": "^7.3.3",
