--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "postgres": "^3.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router": "^6.16.0"
+        "react-router": "^6.16.0",
+        
     },
     "devDependencies": {
         "@babel/core": "^7.22.5",
@@ -34,7 +35,6 @@
         "babel-loader": "^9.1.2",
         "cors": "^2.8.5",
         "css-loader": "^6.8.1",
-        "express": "^4.18.2",
         "html-webpack-plugin": "^5.5.3",
         "nodemon": "^2.0.22",
         "postcss": "^8.4.31",
