--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "postgres": "^3.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router": "^6.16.0",
+        "react-router": "^6.16.0"
         
     },
     "devDependencies": {
