--- a/package.json
+++ b/package.json
@@ -24,25 +24,24 @@
         "postgres": "^3.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router": "^6.16.0"
+        "react-router": "^6.16.0",
+        "react-router-dom": "^6.13.0",
+        "babel-loader": "^9.1.2",
+        "cors": "^2.8.5",
+        "nodemon": "^2.0.22"
+  
         
     },
     "devDependencies": {
         "@babel/core": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
         "@babel/preset-react": "^7.22.5",
-        "autoprefixer": "^10.4.16",
-        "babel-loader": "^9.1.2",
-        "cors": "^2.8.5",
-        "css-loader": "^6.8.1",
-        "html-webpack-plugin": "^5.5.3",
-        "nodemon": "^2.0.22",
         "postcss": "^8.4.31",
         "postcss-loader": "^7.3.3",
+        "autoprefixer": "^10.4.16",
+        "html-webpack-plugin": "^5.5.3",
         "prettier": "^2.8.8",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.13.0",
+        "css-loader": "^6.8.1",
         "sass": "^1.63.4",
         "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
