--- a/package.json
+++ b/package.json
@@ -10,38 +10,36 @@
     },
     "engines": {
         "node": "=18.0.0"
-      },
+    },
     "author": "Wonderpus Photogenicus",
     "license": "MIT",
     "dependencies": {
+        "babel-loader": "^9.1.2",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.3.0",
+        "cors": "^2.8.5",
         "daisyui": "^3.8.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "nodemon": "^2.0.22",
         "path": "^0.12.7",
         "pg": "^8.11.0",
         "postgres": "^3.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router": "^6.16.0",
-        "react-router-dom": "^6.13.0",
-        "babel-loader": "^9.1.2",
-        "cors": "^2.8.5",
-        "nodemon": "^2.0.22"
-  
-        
+        "react-router-dom": "^6.13.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
         "@babel/preset-react": "^7.22.5",
+        "autoprefixer": "^10.4.16",
+        "css-loader": "^6.8.1",
+        "html-webpack-plugin": "^5.5.3",
         "postcss": "^8.4.31",
         "postcss-loader": "^7.3.3",
-        "autoprefixer": "^10.4.16",
-        "html-webpack-plugin": "^5.5.3",
         "prettier": "^2.8.8",
-        "css-loader": "^6.8.1",
         "sass": "^1.63.4",
         "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
